tests/fail/gram_undefined.frac
main() {
  draw(koch,5);
}
